# 6502Emu

./: CMakeLists.txt  README.md
src/: bus.c  bus.h  cpu.c  cpu.h  main.c  opcode.c  opcode.h
